<resources>
    <string name="app_name">UcanDevelop</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_confpass">Confirmar contraseña</string>
    <string name="title_login">Bienvenido Ucan Develop</string>
    <string name="text_button">Ingresar</string>
    <string name="text_register">Aun no tienes una cuenta? Reqistrate Aqui</string>
    <string name="title_register">Registrate y se parte de la Comunidad</string>
    <string name="text_button_register">Registrarse</string>
    <string name="text_button_login">Ya tienes una cuenta? Ingresa Aqui</string>
    <string name="text_welcome">Ya estas dentro del juego</string>
    <string name="btn_logout">Cerrar</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Ejercicios</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
